third_party/blink/renderer/core/style/svg_computed_style_defs.h
@@ -30,6 +30,7 @@
 
 #include "base/memory/scoped_refptr.h"
 #include "third_party/blink/renderer/core/core_export.h"
+#include "third_party/blink/renderer/core/css/style_color.h"
 #include "third_party/blink/renderer/core/style/style_path.h"
 #include "third_party/blink/renderer/platform/geometry/length.h"
 #include "third_party/blink/renderer/platform/graphics/color.h"
@@ -249,8 +250,8 @@ class StyleStopData : public RefCounted<StyleStopData> {
     return !(*this == other);
   }
 
+  StyleColor color;
   float opacity;
-  Color color;
 
  private:
   StyleStopData();
